# AI-Chat-Bot

./: .env.example  .gitignore  ADMIN_QUICK_START.md  ANALYTICS_DASHBOARD_COMPLETE.md  ANALYTICS_GUIDE.md  Building-Production-Ready-AI-ChatBot-Platform.md  CHANGELOG.md  DEPLOYMENT_STATUS.md  DOCKER_DEPLOYMENT_GUIDE.md  DOCKER_QUICK_START.md  FIRST_ADMIN_SETUP.md  GITHUB_RELEASES_GUIDE.md  HOW_TO_CREATE_ADMIN.md  LANGCHAIN_SERVICE_SUMMARY.md  MCP_README.md  PROJECT_CLEANUP_SUMMARY.md  QUICK_START.md  QUICK_START_LOCAL.md  README.md  RELEASES_SUMMARY.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v2.0.0.md  RELEASE_NOTES_v3.0.0.md  STARTUP_GUIDE.md  UPDATE_SUMMARY_V2.0.0.md  UPDATE_SUMMARY_V3.0.0.md  VERSIONING.md  add-admin-role.bat  bootstrap-admin.bat  bootstrap-admin.sh  check_roles.py  create_releases.bat  create_releases.ps1  docker-compose.yml  docker-validate.bat  docker-validate.sh  migrate_to_single_db.py  pyproject.toml  setup-admin.bat  (+2 more)
Authentication-Authorization/: Authorization Server.postman_environment.json  README.md  pyproject.toml
Authentication-Authorization/auth_server/: main.py
Authentication-Authorization/auth_server/database/: db.py
Authentication-Authorization/auth_server/routers/: roles.py  users.py
Authentication-Authorization/auth_server/schemas/: user.py
Authentication-Authorization/auth_server/security/: __init__.py  auth.py
Authentication-Authorization/tests/: test_main.py
analytics-service/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  test_auth_debug.py
analytics-service/analytics/: __init__.py
analytics-service/analytics/database/: __init__.py  db.py
analytics-service/analytics/models/: __init__.py  analytics.py
analytics-service/analytics/routers/: __init__.py  analytics.py
analytics-service/analytics/schemas/: __init__.py  analytics.py
analytics-service/analytics/security/: __init__.py  auth.py
analytics-service/analytics/services/: __init__.py  analytics_service.py
auth-service/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
auth-service/auth_server/: main.py
auth-service/auth_server/database/: __init__.py  db.py  migrations.py
auth-service/auth_server/models/: user.py
auth-service/auth_server/routers/: auth.py  users.py
auth-service/auth_server/schemas/: __init__.py  user.py
auth-service/auth_server/security/: auth.py
auth-service/tests/: test_roles.py  test_smoke.py
authentication-authorization/: .pre-commit-config.yaml  CONTRIBUTING.md
chat-frontend/: .env.example  .gitignore  Dockerfile  README.md  nginx.conf  package.json
chat-service/: .env.example  .pylintrc  README.md  __init__.py  app.py  main.py  pyproject.toml
chat-service/alembic/versions/: add_mcp_servers.py
chat-service/api/: routes.py
chat-service/engine/: __init__.py  conversation_crud.py  crud.py  database.py  item_crud.py  mcp_server_crud.py  models.py  schemas.py  user_crud.py
chat-service/middleware/: analytics_middleware.py
chat-service/security/: __init__.py  oauth.py
chat-service/services/: mcp_tools_service.py  openai_service.py
chat-service/tests/: migrate_to_hash_ids.py  test_hash_api.py  test_hash_generation.py
chat-service/utilities/: __init__.py  database_utils.py  datetime_utils.py  hash_utils.py  response_utils.py  validation_utils.py
chat-service/websocket/: __init__.py  chat_handler.py
docs/: ANALYTICS_GUIDE.md  ANALYTICS_IMPLEMENTATION.md  Building-Production-Ready-AI-ChatBot-Platform.md  CHANGELOG.md  DATABASE_MIGRATION.md  ENV_CONFIGURATION.md  HOW_TO_CREATE_ADMIN.md  MCP_QUICKSTART.md  MCP_SERVER_MANAGEMENT.md  PROJECT_CLEANUP_SUMMARY.md  QUICK_START_LOCAL.md  README.md  TESTING_ANALYTICS.md  USER_DELETION_FEATURE.md  VERSIONING.md
langchain-service/: .dockerignore  .env.example  DEVELOPER_GUIDE.md  Dockerfile  QUICK_START.md  README.md  main.py  pyproject.toml  requirements.txt  start-service.bat  start-service.sh
langchain-service/app/: main.py
langchain-service/app/api/: routes.py
langchain-service/app/models/: schemas.py
langchain-service/app/services/: chat_service_client.py  langchain_workflow.py
langchain-service/app/utils/: config.py  logging_utils.py
openai_web_service/: .dockerignore  .env.example  Dockerfile  README.md  app.py  main.py  nginx.conf  requirements.txt
scripts/: PATH_VERIFICATION.md  README.md
timezone-mcp-server/: .env.example  Dockerfile  README.md  mcp_http_server.py  pyproject.toml  requirements.txt  test_server.py
(+143 files in other folders)
