[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = false

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.poetry.dev-dependencies]
black = "24.1.0"
flake8 = "6.1.0"
pre-commit = "3.4.0"
pytest = "*"
