[project]
name = "open-chatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Vivek Yadav",email = "v.cse59@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "sqlalchemy>=2.0.30",
    "databases[sqlite]>=0.9.0",
    "python-multipart>=0.0.16",
    "pydantic-settings>=2.6.0",
    "alembic>=1.13.0",
    "openai>=1.50.0",
    "websockets>=12.0",
    "email-validator>=2.1.0",
    "pytz>=2024.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0"
]

[tool.poetry]
packages = [{include = "open_chatbot", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
