[tool.poetry]
name = "langchain-service"
version = "1.0.0"
description = "LangChain Workflow Service for ConvoAI Platform"
authors = ["ConvoAI Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115.0"
uvicorn = ">=0.32.0"
langchain = ">=0.1.0"
langchain-openai = ">=0.0.5"
openai = ">=1.50.0"
httpx = ">=0.27.0"
python-dotenv = ">=1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
