[tool.poetry]
name = "timezone-mcp-server"
version = "1.0.0"
description = "MCP Server for timezone information with authentication"
authors = ["ConvoAI Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mcp = "^1.1.2"
httpx = "^0.27.0"
python-dateutil = "^2.9.0"
pytz = "^2024.1"
pydantic = "^2.10.3"
pydantic-settings = "^2.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
